fix: update class names for visualization body and wrap for consistency

--- a/packages/filtered-text/src/scss/main.scss
+++ b/packages/filtered-text/src/scss/main.scss
@@ -18,7 +18,7 @@
     // display: initial;
     float: none;
   }
-  .cove-visualization__body.body:not(:empty) {
+  .cove-visualization__body-wrap:not(:empty) {
     padding: 0;
 
     &.has-top-padding {
